--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -6,7 +6,7 @@
    "outputs": [],
    "source": [
     "# if the following command generates an error, you probably didn't enable\n",
-    "# the cluster security option \"Allow API access to all Google Cloud services\"\n",
+    "# the cluster security option \"Allow API accesses to all Google Cloud services\"\n",
     "# under Manage Security → Project Access when setting up the cluster\n",
     "!gcloud dataproc clusters list --region us-central1"
    ],
@@ -38,45 +38,63 @@
    "outputs": [],
    "source": [
     "import searcher\n",
-    "\n",
+    "# general\n",
+    "import pyspark\n",
     "import sys\n",
     "from collections import Counter, OrderedDict, defaultdict\n",
     "import itertools\n",
     "from itertools import islice, count, groupby\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import bz2\n",
     "import os\n",
     "import re\n",
     "from operator import itemgetter\n",
-    "from functools import partial\n",
-    "from xml.etree import ElementTree\n",
-    "import codecs\n",
-    "import csv\n",
-    "import gdown\n",
+    "import nltk\n",
+    "from nltk.stem.porter import *\n",
+    "from nltk.corpus import stopwords\n",
     "from time import time\n",
-    "from timeit import timeit\n",
     "from pathlib import Path\n",
     "import pickle\n",
-    "\n",
+    "import pandas as pd\n",
     "from google.cloud import storage\n",
-    "\n",
-    "import pyspark\n",
-    "from pyspark.sql import *\n",
-    "from pyspark.sql.functions import *\n",
-    "from pyspark import SparkContext, SparkConf\n",
-    "from pyspark.sql import SQLContext\n",
-    "from pyspark.ml.feature import Tokenizer, RegexTokenizer\n",
-    "from graphframes import *\n",
     "\n",
     "import hashlib\n",
     "def _hash(s):\n",
     "    return hashlib.blake2b(bytes(s, encoding='utf8'), digest_size=5).hexdigest()\n",
     "\n",
-    "import nltk\n",
-    "from nltk.stem.porter import *\n",
-    "from nltk.corpus import stopwords\n",
     "nltk.download('stopwords')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# if nothing prints here you forgot to include the initialization script when starting the cluster\n",
+    "!ls -l /usr/lib/spark/jars/graph*"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import *\n",
+    "from pyspark.sql.functions import *\n",
+    "from pyspark import SparkContext, SparkConf, SparkFiles\n",
+    "from pyspark.sql import SQLContext\n",
+    "from graphframes import *"
    ],
    "metadata": {
     "collapsed": false,
@@ -105,7 +123,7 @@
    "outputs": [],
    "source": [
     "# Put your bucket name below and make sure you can access it without an error\n",
-    "bucket_name = 'assignment3_final_bucket'\n",
+    "bucket_name = 'information_retrieval_project'\n",
     "full_path = f\"gs://{bucket_name}/\"\n",
     "paths=[]\n",
     "\n",
@@ -113,7 +131,25 @@
     "blobs = client.list_blobs(bucket_name)\n",
     "for b in blobs:\n",
     "    if b.name != 'graphframes.sh':\n",
-    "        paths.append(full_path+b.name)"
+    "        paths.append(full_path+b.name)\n",
+    "\n",
+    "parquetFile = spark.read.parquet(*paths)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# if nothing prints here you forgot to upload the file inverted_index_gcp.py to the home dir\n",
+    "% cd -q / home / dataproc\n",
+    "!ls inverted_index_gcp.py"
    ],
    "metadata": {
     "collapsed": false,
@@ -139,39 +175,9 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from inverted_index_gcp import InvertedIndex"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "titles_index = InvertedIndex()\n",
-    "body_index = InvertedIndex()\n",
-    "anchor_index = InvertedIndex()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
-    "# PageViews"
+    "# Page Views"
    ],
    "metadata": {
     "collapsed": false,
@@ -232,102 +238,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# PageRank"
+    "# Page Rank"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# These will already be installed in the testing environment so disregard the\n",
-    "# amount of time (~1 minute) it takes to install.\n",
-    "!pip install -q pyspark\n",
-    "!pip install -U -q PyDrive\n",
-    "!apt install openjdk-8-jdk-headless -qq\n",
-    "!pip install -q graphframes\n",
-    "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\"\n",
-    "graphframes_jar = 'https://repos.spark-packages.org/graphframes/graphframes/0.8.2-spark3.2-s_2.12/graphframes-0.8.2-spark3.2-s_2.12.jar'\n",
-    "spark_jars = '/usr/local/lib/python3.7/dist-packages/pyspark/jars'\n",
-    "!wget -N -P $spark_jars $graphframes_jar"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# Initializing spark context\n",
-    "# create a spark context and session\n",
-    "conf = SparkConf().set(\"spark.ui.port\", \"4050\")\n",
-    "conf.set(\"spark.jars.packages\", \"graphframes:graphframes:0.8.2-spark3.2-s_2.12\")\n",
-    "sc = pyspark.SparkContext(conf=conf)\n",
-    "sc.addPyFile(str(Path(spark_jars) / Path(graphframes_jar).name))\n",
-    "spark = SparkSession.builder.getOrCreate()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# Copy one wikidumps files\n",
-    "from google.colab import auth\n",
-    "## RENAME the project_id to yours project id from the project you created in GCP\n",
-    "project_id = 'assignment3-370512'\n",
-    "!gcloud config set project {project_id}\n",
-    "\n",
-    "data_bucket_name = 'wikidata_preprocessed'\n",
-    "try:\n",
-    "    if os.environ[\"wikidata_preprocessed\"] is not None:\n",
-    "        pass\n",
-    "except:\n",
-    "      !mkdir wikidumps\n",
-    "      !gsutil -u {project_id} cp gs://{data_bucket_name}/multistream1_preprocessed.parquet \"wikidumps/\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    if os.environ[\"wikidata_preprocessed\"] is not None:\n",
-    "      path = os.environ[\"wikidata_preprocessed\"]+\"/wikidumps/*\"\n",
-    "except:\n",
-    "      path = \"wikidumps/*\"\n",
-    "\n",
-    "parquetFile = spark.read.parquet(path)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
     }
    }
   },
@@ -383,6 +299,301 @@
     "pr.repartition(1).write.csv(f'gs://{bucket_name}/pr', compression=\"gzip\")\n",
     "\n",
     "searcher.set_page_views(f'gs://{bucket_name}/pr')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Tokenization"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "english_stopwords = frozenset(stopwords.words('english'))\n",
+    "corpus_stopwords = [\"category\", \"references\", \"also\", \"external\", \"links\",\n",
+    "                    \"may\", \"first\", \"see\", \"history\", \"people\", \"one\", \"two\",\n",
+    "                    \"part\", \"thumb\", \"including\", \"second\", \"following\",\n",
+    "                    \"many\", \"however\", \"would\", \"became\"]\n",
+    "\n",
+    "all_stopwords = english_stopwords.union(corpus_stopwords)\n",
+    "RE_WORD = re.compile(r\"\"\"[\\#\\@\\w](['\\-]?\\w){2,24}\"\"\", re.UNICODE)\n",
+    "\n",
+    "NUM_BUCKETS = 124\n",
+    "def token2bucket_id(token):\n",
+    "  return int(_hash(token),16) % NUM_BUCKETS\n",
+    "\n",
+    "def tokenize(text):\n",
+    "    \"\"\"\n",
+    "    This function aims in tokenize a text into a list of tokens. Moreover, it filter stopwords.\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "        text: string , representing the text to tokenize.\n",
+    "    Returns:\n",
+    "    -----------\n",
+    "        list of tokens (e.g., list of tokens).\n",
+    "    \"\"\"\n",
+    "    list_of_tokens = [token.group() for token in RE_WORD.finditer(text.lower()) if\n",
+    "                      token.group() not in all_stopwords]\n",
+    "    return list_of_tokens"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Counts: Term Weights"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# PLACE YOUR CODE HERE\n",
+    "def word_count(text, id):\n",
+    "    \"\"\" Count the frequency of each word in `text` (tf) that is not included in\n",
+    "    `all_stopwords` and return entries that will go into our posting lists.\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "      text: str\n",
+    "        Text of one document\n",
+    "      id: int\n",
+    "        Document id\n",
+    "    Returns:\n",
+    "    --------\n",
+    "      List of tuples\n",
+    "        A list of (token, (doc_id, tf)) pairs.\n",
+    "    \"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "    word_counter = Counter()\n",
+    "    word_counter.update(tokenize(text))\n",
+    "    return [(token[0], (id, token[1])) for token in word_counter.items()]\n",
+    "\n",
+    "def reduce_word_counts(unsorted_pl):\n",
+    "    \"\"\" Returns a sorted posting list by wiki_id.\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "      unsorted_pl: list of tuples\n",
+    "        A list of (wiki_id, tf) tuples\n",
+    "    Returns:\n",
+    "    --------\n",
+    "      list of tuples\n",
+    "        A sorted posting list.\n",
+    "    \"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "    return sorted(unsorted_pl)\n",
+    "\n",
+    "def calculate_df(postings):\n",
+    "    \"\"\" Takes a posting list RDD and calculate the df for each token.\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "      postings: RDD\n",
+    "        An RDD where each element is a (token, posting_list) pair.\n",
+    "    Returns:\n",
+    "    --------\n",
+    "      RDD\n",
+    "        An RDD where each element is a (token, df) pair.\n",
+    "    \"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "    return postings.map(lambda x: (x[0], len(x[1])))\n",
+    "\n",
+    "def get_doc_length(text):\n",
+    "    \"\"\" Calculates the document's length, not including `all_stopwords`.\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "      text: str\n",
+    "        Text of one document\n",
+    "      id: int\n",
+    "        Document id\n",
+    "    Returns:\n",
+    "    --------\n",
+    "      int\n",
+    "        Document length\n",
+    "    \"\"\"\n",
+    "    return len(tokenize(text))\n",
+    "\n",
+    "def partition_postings_and_write(postings):\n",
+    "    \"\"\" A function that partitions the posting lists into buckets, writes out\n",
+    "    all posting lists in a bucket to disk, and returns the posting locations for\n",
+    "    each bucket. Partitioning should be done through the use of `token2bucket`\n",
+    "    above. Writing to disk should use the function  `write_a_posting_list`, a\n",
+    "    static method implemented in inverted_index_colab.py under the InvertedIndex\n",
+    "    class.\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "      postings: RDD\n",
+    "        An RDD where each item is a (w, posting_list) pair.\n",
+    "    Returns:\n",
+    "    --------\n",
+    "      RDD\n",
+    "        An RDD where each item is a posting locations dictionary for a bucket. The\n",
+    "        posting locations maintain a list for each word of file locations and\n",
+    "        offsets its posting list was written to. See `write_a_posting_list` for\n",
+    "        more details.\n",
+    "    \"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: anchor_index.write_a_posting_list(x, bucket_name))\n",
+    "\n",
+    "def createIndex(index, doc_pairs, shouldFilter, dir):\n",
+    "    # word counts map\n",
+    "    word_counts = doc_pairs.flatMap(lambda x: word_count(x[0], x[1]))\n",
+    "    postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
+    "\n",
+    "    if shouldFilter:\n",
+    "        # filtering postings and calculate df\n",
+    "        postings = postings.filter(lambda x: len(x[1])>50)\n",
+    "\n",
+    "    w2df = calculate_df(postings)\n",
+    "    w2df_dict = w2df.collectAsMap()\n",
+    "    # partition posting lists and write out\n",
+    "    _ = partition_postings_and_write(postings).collect()\n",
+    "\n",
+    "    # collect all posting lists locations into one super-set\n",
+    "    super_posting_locs = defaultdict(list)\n",
+    "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/{dir}'):\n",
+    "      if not blob.name.endswith(\"pickle\"):\n",
+    "        continue\n",
+    "      with blob.open(\"rb\") as f:\n",
+    "        posting_locs = pickle.load(f)\n",
+    "        for k, v in posting_locs.items():\n",
+    "          super_posting_locs[k].extend(v)\n",
+    "\n",
+    "    # Adding the posting locations dictionary to the inverted index\n",
+    "    index.posting_locs = super_posting_locs\n",
+    "    # Add the token - df dictionary to the inverted index\n",
+    "    index.df = w2df_dict\n",
+    "    # write the global stats out\n",
+    "    index.write_index('.', dir)\n",
+    "    # upload to gs\n",
+    "    index_src = f'{dir}.pkl'\n",
+    "    index_dst = f'gs://{bucket_name}/postings_gcp/{index_src}'\n",
+    "    !gsutil cp $index_src $index_dst\n",
+    "    !gsutil ls -lh $index_dst"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Create the Body Indexes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from body_inverted_index_gcp import InvertedIndex as bodyIndex\n",
+    "\n",
+    "body_index = bodyIndex()\n",
+    "\n",
+    "# take the 'text' and 'id' and create an RDD from it\n",
+    "doc_text_pairs = parquetFile.select(\"id\", \"text\").rdd\n",
+    "\n",
+    "createIndex(body_index, doc_text_pairs, True, 'body_index')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Create the Title Indexes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from body_inverted_index_gcp import InvertedIndex as titleIndex\n",
+    "\n",
+    "title_index = titleIndex()\n",
+    "\n",
+    "# take the 'title' and 'id' and create an RDD from it\n",
+    "doc_title_pairs = parquetFile.select(\"id\", \"title\").rdd\n",
+    "\n",
+    "createIndex(body_index, doc_title_pairs, False, 'title_index')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Create the Anchor Indexes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from body_inverted_index_gcp import InvertedIndex as anchorIndex\n",
+    "\n",
+    "anchor_index = anchorIndex()\n",
+    "\n",
+    "# take the 'anchor' and 'id' and create an RDD from it\n",
+    "doc_anchor_pairs = parquetFile.select(\"id\", \"anchor_text\")\n",
+    "\n",
+    "createIndex(title_index, doc_anchor_pairs, False, 'anchor_text')"
    ],
    "metadata": {
     "collapsed": false,
