--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -130,7 +130,7 @@
     "client = storage.Client()\n",
     "blobs = client.list_blobs(bucket_name)\n",
     "for b in blobs:\n",
-    "    if b.name != 'graphframes.sh':\n",
+    "    if b.name != 'graphframes.sh' and b.name != 'pageviews-202108-user.pkl' and b.name != 'run_frontend_in_gcp.sh' and b.name != 'startup_script_gcp.sh':\n",
     "        paths.append(full_path+b.name)\n",
     "\n",
     "parquetFile = spark.read.parquet(*paths)"
@@ -149,7 +149,9 @@
    "source": [
     "# if nothing prints here you forgot to upload the file inverted_index_gcp.py to the home dir\n",
     "% cd -q / home / dataproc\n",
-    "!ls inverted_index_gcp.py"
+    "!ls body_inverted_index_gcp.py\n",
+    "!ls title_inverted_index_gcp.py\n",
+    "!ls anchor_inverted_index_gcp.py"
    ],
    "metadata": {
     "collapsed": false,
@@ -164,7 +166,9 @@
    "outputs": [],
    "source": [
     "# adding our python module to the cluster\n",
-    "sc.addFile(\"/home/dataproc/inverted_index_gcp.py\")\n",
+    "sc.addFile(\"/home/dataproc/body_inverted_index_gcp.py\")\n",
+    "sc.addFile(\"/home/dataproc/title_inverted_index_gcp.py\")\n",
+    "sc.addFile(\"/home/dataproc/anchor_inverted_index_gcp.py\")\n",
     "sys.path.insert(0, SparkFiles.getRootDirectory())"
    ],
    "metadata": {
@@ -194,39 +198,39 @@
     "# Paths\n",
     "# Using user page views (as opposed to spiders and automated traffic) for the\n",
     "# month of August 2021\n",
-    "pv_path = 'https://dumps.wikimedia.org/other/pageview_complete/monthly/2021/2021-08/pageviews-202108-user.bz2'\n",
-    "p = Path(pv_path)\n",
-    "pv_name = p.name\n",
-    "pv_temp = f'{p.stem}-4dedup.txt'\n",
-    "pv_clean = f'{p.stem}.pkl'\n",
-    "# Download the file (2.3GB)\n",
-    "!wget -N $pv_path\n",
-    "# Filter for English pages, and keep just two fields: article ID (3) and monthly\n",
-    "# total number of page views (5). Then, remove lines with article id or page\n",
-    "# view values that are not a sequence of digits.\n",
-    "!bzcat $pv_name | grep \"^en\\.wikipedia\" | cut -d' ' -f3,5 | grep -P \"^\\d+\\s\\d+$\" > $pv_temp\n",
+    "# pv_path = 'https://dumps.wikimedia.org/other/pageview_complete/monthly/2021/2021-08/pageviews-202108-user.bz2'\n",
+    "# p = Path(pv_path)\n",
+    "# pv_name = p.name\n",
+    "# pv_temp = f'{p.stem}-4dedup.txt'\n",
+    "# pv_clean = f'{p.stem}.pkl'\n",
+    "# # Download the file (2.3GB)\n",
+    "# !wget -N $pv_path\n",
+    "# # Filter for English pages, and keep just two fields: article ID (3) and monthly\n",
+    "# # total number of page views (5). Then, remove lines with article id or page\n",
+    "# # view values that are not a sequence of digits.\n",
+    "# !bzcat $pv_name | grep \"^en\\.wikipedia\" | cut -d' ' -f3,5 | grep -P \"^\\d+\\s\\d+$\" > $pv_temp\n",
+    "# # Create a Counter (dictionary) that sums up the pages views for the same\n",
+    "# # article, resulting in a mapping from article id to total page views.\n",
+    "# wid2pv = Counter()\n",
+    "# with open(pv_temp, 'rt') as f:\n",
+    "#   for line in f:\n",
+    "#     parts = line.split(' ')\n",
+    "#     wid2pv.update({int(parts[0]): int(parts[1])})\n",
+    "# # write out the counter as binary file (pickle it)\n",
+    "# with open(pv_clean, 'wb') as f:\n",
+    "#   pickle.dump(wid2pv, f)\n",
     "# Create a Counter (dictionary) that sums up the pages views for the same\n",
     "# article, resulting in a mapping from article id to total page views.\n",
-    "wid2pv = Counter()\n",
-    "with open(pv_temp, 'rt') as f:\n",
-    "  for line in f:\n",
-    "    parts = line.split(' ')\n",
-    "    wid2pv.update({int(parts[0]): int(parts[1])})\n",
-    "# write out the counter as binary file (pickle it)\n",
-    "with open(pv_clean, 'wb') as f:\n",
-    "  pickle.dump(wid2pv, f)\n",
-    "# Create a Counter (dictionary) that sums up the pages views for the same\n",
-    "# article, resulting in a mapping from article id to total page views.\n",
-    "wid2pv = Counter()\n",
-    "with open(pv_temp, 'rt') as f:\n",
-    "    for line in f:\n",
-    "        parts = line.split(' ')\n",
-    "        wid2pv.update({int(parts[0]): int(parts[1])})\n",
-    "# write out the counter as binary file (pickle it)\n",
-    "with open(pv_clean, 'wb') as f:\n",
-    "    pickle.dump(wid2pv, f)\n",
-    "\n",
-    "searcher.set_page_views(pv_temp)"
+    "# wid2pv = Counter()\n",
+    "# with open(pv_temp, 'rt') as f:\n",
+    "#     for line in f:\n",
+    "#         parts = line.split(' ')\n",
+    "#         wid2pv.update({int(parts[0]): int(parts[1])})\n",
+    "# # write out the counter as binary file (pickle it)\n",
+    "# with open(pv_clean, 'wb') as f:\n",
+    "#     pickle.dump(wid2pv, f)\n",
+    "#\n",
+    "# searcher.set_page_views(pv_temp)"
    ],
    "metadata": {
     "collapsed": false,
@@ -298,7 +302,7 @@
     "pr = pr.sort(col('pagerank').desc())\n",
     "pr.repartition(1).write.csv(f'gs://{bucket_name}/pr', compression=\"gzip\")\n",
     "\n",
-    "searcher.set_page_views(f'gs://{bucket_name}/pr')"
+    "# searcher.set_page_ranks(f'gs://{bucket_name}/pr')"
    ],
    "metadata": {
     "collapsed": false,
