--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -462,7 +462,7 @@
     "        more details.\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: anchor_index.write_a_posting_list(x, bucket_name))\n",
+    "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: title_index.write_a_posting_list(x, bucket_name))\n",
     "\n",
     "def createIndex(index, doc_pairs, shouldFilter, dir):\n",
     "    # word counts map\n",
@@ -529,7 +529,7 @@
     "body_index = bodyIndex()\n",
     "\n",
     "# take the 'text' and 'id' and create an RDD from it\n",
-    "doc_text_pairs = parquetFile.select(\"id\", \"text\").rdd\n",
+    "doc_text_pairs = parquetFile.select(\"text\", \"id\").rdd\n",
     "\n",
     "createIndex(body_index, doc_text_pairs, True, 'body_index')"
    ],
@@ -557,14 +557,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from body_inverted_index_gcp import InvertedIndex as titleIndex\n",
+    "from title_inverted_index_gcp import InvertedIndex as titleIndex\n",
     "\n",
     "title_index = titleIndex()\n",
     "\n",
     "# take the 'title' and 'id' and create an RDD from it\n",
-    "doc_title_pairs = parquetFile.select(\"id\", \"title\").rdd\n",
+    "doc_title_pairs = parquetFile.select(\"title\", \"id\").rdd\n",
     "\n",
-    "createIndex(body_index, doc_title_pairs, False, 'title_index')"
+    "createIndex(title_index, doc_title_pairs, False, 'title_index')"
    ],
    "metadata": {
     "collapsed": false,
@@ -590,14 +590,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from body_inverted_index_gcp import InvertedIndex as anchorIndex\n",
+    "from anchor_inverted_index_gcp import InvertedIndex as anchorIndex\n",
     "\n",
     "anchor_index = anchorIndex()\n",
     "\n",
     "# take the 'anchor' and 'id' and create an RDD from it\n",
-    "doc_anchor_pairs = parquetFile.select(\"id\", \"anchor_text\")\n",
+    "doc_anchor_pairs = parquetFile.select(\"anchor_text\", \"id\").rdd.flatMap(lambda x :x[0]).groupByKey().mapValues(list).map(lambda x: (x[0], \" \".join([y for y in x[1]])))\n",
     "\n",
-    "createIndex(title_index, doc_anchor_pairs, False, 'anchor_text')"
+    "createIndex(anchor_index, doc_anchor_pairs, False, 'anchor_text')"
    ],
    "metadata": {
     "collapsed": false,
