Fixed anchor text rdd creation

--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -37,7 +37,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "import searcher\n",
     "# general\n",
     "import pyspark\n",
     "import sys\n",
@@ -595,7 +594,7 @@
     "anchor_index = anchorIndex()\n",
     "\n",
     "# take the 'anchor' and 'id' and create an RDD from it\n",
-    "doc_anchor_pairs = parquetFile.select(\"anchor_text\", \"id\").rdd.flatMap(lambda x :x[0]).groupByKey().mapValues(list).map(lambda x: (x[0], \" \".join([y for y in x[1]])))\n",
+    "doc_anchor_pairs = parquetFile.select(\"anchor_text\", \"id\").rdd.flatMap(lambda x :x[0]).groupByKey().mapValues(list).map(lambda x: (x[1], \" \".join([t for t in x[0]])))\n",
     "\n",
     "createIndex(anchor_index, doc_anchor_pairs, False, 'anchor_text')"
    ],
