--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -463,23 +463,10 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: title_index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, doc_pairs, shouldFilter, dir):\n",
-    "    # word counts map\n",
-    "    word_counts = doc_pairs.flatMap(lambda x: word_count(x[0], x[1]))\n",
-    "    postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
-    "\n",
-    "    if shouldFilter:\n",
-    "        # filtering postings and calculate df\n",
-    "        postings = postings.filter(lambda x: len(x[1])>50)\n",
-    "\n",
-    "    w2df = calculate_df(postings)\n",
-    "    w2df_dict = w2df.collectAsMap()\n",
-    "    # partition posting lists and write out\n",
-    "    _ = partition_postings_and_write(postings).collect()\n",
-    "\n",
+    "def createIndex(index, w2df_dict, directory):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
-    "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/{dir}'):\n",
+    "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/{directory}'):\n",
     "      if not blob.name.endswith(\"pickle\"):\n",
     "        continue\n",
     "      with blob.open(\"rb\") as f:\n",
@@ -492,9 +479,9 @@
     "    # Add the token - df dictionary to the inverted index\n",
     "    index.df = w2df_dict\n",
     "    # write the global stats out\n",
-    "    index.write_index('.', dir)\n",
+    "    index.write_index('.', directory)\n",
     "    # upload to gs\n",
-    "    index_src = f'{dir}.pkl'\n",
+    "    index_src = f'{directory}.pkl'\n",
     "    index_dst = f'gs://{bucket_name}/postings_gcp/{index_src}'\n",
     "    !gsutil cp $index_src $index_dst\n",
     "    !gsutil ls -lh $index_dst"
@@ -530,7 +517,19 @@
     "# take the 'text' and 'id' and create an RDD from it\n",
     "doc_text_pairs = parquetFile.select(\"text\", \"id\").rdd\n",
     "\n",
-    "createIndex(body_index, doc_text_pairs, True, 'body_index')"
+    "# word counts map\n",
+    "word_counts = doc_text_pairs.flatMap(lambda x: word_count(x[0], x[1]))\n",
+    "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
+    "\n",
+    "# filtering postings and calculate df\n",
+    "postings = postings.filter(lambda x: len(x[1])>50)\n",
+    "\n",
+    "w2df = calculate_df(postings)\n",
+    "w2df_dict = w2df.collectAsMap()\n",
+    "# partition posting lists and write out\n",
+    "_ = partition_postings_and_write(postings).collect()\n",
+    "\n",
+    "createIndex(body_index, w2df_dict, 'body_index')"
    ],
    "metadata": {
     "collapsed": false,
@@ -563,7 +562,16 @@
     "# take the 'title' and 'id' and create an RDD from it\n",
     "doc_title_pairs = parquetFile.select(\"title\", \"id\").rdd\n",
     "\n",
-    "createIndex(title_index, doc_title_pairs, False, 'title_index')"
+    "# word counts map\n",
+    "word_counts = doc_title_pairs.flatMap(lambda x: word_count(x[0], x[1]))\n",
+    "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
+    "\n",
+    "w2df = calculate_df(postings)\n",
+    "w2df_dict = w2df.collectAsMap()\n",
+    "# partition posting lists and write out\n",
+    "_ = partition_postings_and_write(postings).collect()\n",
+    "\n",
+    "createIndex(title_index, w2df_dict, 'title_index')"
    ],
    "metadata": {
     "collapsed": false,
@@ -593,10 +601,19 @@
     "\n",
     "anchor_index = anchorIndex()\n",
     "\n",
-    "# take the 'anchor' and 'id' and create an RDD from it\n",
-    "doc_anchor_pairs = parquetFile.select(\"anchor_text\", \"id\").rdd.flatMap(lambda x :x[0]).groupByKey().mapValues(list).map(lambda x: (x[1], \" \".join([t for t in x[0]])))\n",
+    "# take the 'anchor' and create an RDD from it\n",
+    "doc_anchor = parquetFile.select(\"anchor_text\").rdd\n",
     "\n",
-    "createIndex(anchor_index, doc_anchor_pairs, False, 'anchor_text')"
+    "# word counts map\n",
+    "word_counts = doc_anchor.flatMap(lambda x: x.anchor_text).distinct().map(lambda x: word_count(x.text, x.id)).flatMap(lambda x: x).distinct()\n",
+    "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
+    "\n",
+    "w2df = calculate_df(postings)\n",
+    "w2df_dict = w2df.collectAsMap()\n",
+    "# partition posting lists and write out\n",
+    "_ = partition_postings_and_write(postings).collect()\n",
+    "\n",
+    "createIndex(anchor_index, w2df_dict, 'anchor_index')"
    ],
    "metadata": {
     "collapsed": false,
