--- a/search_engine/run_frontend_in_colab.ipynb
+++ b/search_engine/run_frontend_in_colab.ipynb
@@ -16,21 +16,74 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "# download nltk stopwords\n",
+    "from inverted_index_colab import *\n",
+    "\n",
+    "import sys\n",
+    "from collections import Counter, OrderedDict\n",
+    "import itertools\n",
+    "from itertools import islice, count, groupby\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import re\n",
+    "from operator import itemgetter\n",
     "import nltk\n",
-    "nltk.download('stopwords')"
+    "from nltk.stem.porter import *\n",
+    "from nltk.corpus import stopwords\n",
+    "from time import time\n",
+    "from timeit import timeit\n",
+    "from pathlib import Path\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "from google.cloud import storage\n",
+    "\n",
+    "import hashlib\n",
+    "\n",
+    "\n",
+    "def _hash(s):\n",
+    "    return hashlib.blake2b(bytes(s, encoding='utf8'), digest_size=5).hexdigest()\n",
+    "\n",
+    "\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "import pyspark\n",
+    "from pyspark.sql import *\n",
+    "from pyspark.sql.functions import *\n",
+    "from pyspark import SparkContext, SparkConf\n",
+    "from pyspark.sql import SQLContext\n",
+    "from pyspark.ml.feature import Tokenizer, RegexTokenizer\n",
+    "from graphframes import *\n",
+    "# These will already be installed in the testing environment so disregard the\n",
+    "# amount of time (~1 minute) it takes to install.\n",
+    "!pip install -q pyspark\n",
+    "!pip install -U -q PyDrive\n",
+    "!apt install openjdk-8-jdk-headless -qq\n",
+    "!pip install -q graphframes\n",
+    "import os\n",
+    "\n",
+    "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\"\n",
+    "graphframes_jar = 'https://repos.spark-packages.org/graphframes/graphframes/0.8.2-spark3.2-s_2.12/graphframes-0.8.2-spark3.2-s_2.12.jar'\n",
+    "spark_jars = '/usr/local/lib/python3.7/dist-packages/pyspark/jars'\n",
+    "!wget -N -P $spark_jars $graphframes_jar\n",
+    "# Initializing spark context\n",
+    "# create a spark context and session\n",
+    "conf = SparkConf().set(\"spark.ui.port\", \"4050\")\n",
+    "conf.set(\"spark.jars.packages\", \"graphframes:graphframes:0.8.2-spark3.2-s_2.12\")\n",
+    "sc = pyspark.SparkContext(conf=conf)\n",
+    "sc.addPyFile(str(Path(spark_jars) / Path(graphframes_jar).name))\n",
+    "spark = SparkSession.builder.getOrCreate()"
    ],
    "metadata": {
-    "id": "bCPDHP7zTQJZ",
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "outputId": "353bfcc5-0f8f-44cc-db36-d15977fdfdac",
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "outputs": [
     {
@@ -51,7 +104,18 @@
      "metadata": {},
      "execution_count": 1
     }
-   ]
+   ],
+   "source": [
+    "# download nltk stopwords\n",
+    "import nltk\n",
+    "nltk.download('stopwords')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
