--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -197,39 +197,37 @@
     "# Paths\n",
     "# Using user page views (as opposed to spiders and automated traffic) for the\n",
     "# month of August 2021\n",
-    "# pv_path = 'https://dumps.wikimedia.org/other/pageview_complete/monthly/2021/2021-08/pageviews-202108-user.bz2'\n",
-    "# p = Path(pv_path)\n",
-    "# pv_name = p.name\n",
-    "# pv_temp = f'{p.stem}-4dedup.txt'\n",
-    "# pv_clean = f'{p.stem}.pkl'\n",
-    "# # Download the file (2.3GB)\n",
-    "# !wget -N $pv_path\n",
-    "# # Filter for English pages, and keep just two fields: article ID (3) and monthly\n",
-    "# # total number of page views (5). Then, remove lines with article id or page\n",
-    "# # view values that are not a sequence of digits.\n",
-    "# !bzcat $pv_name | grep \"^en\\.wikipedia\" | cut -d' ' -f3,5 | grep -P \"^\\d+\\s\\d+$\" > $pv_temp\n",
-    "# # Create a Counter (dictionary) that sums up the pages views for the same\n",
-    "# # article, resulting in a mapping from article id to total page views.\n",
-    "# wid2pv = Counter()\n",
-    "# with open(pv_temp, 'rt') as f:\n",
-    "#   for line in f:\n",
-    "#     parts = line.split(' ')\n",
-    "#     wid2pv.update({int(parts[0]): int(parts[1])})\n",
-    "# # write out the counter as binary file (pickle it)\n",
-    "# with open(pv_clean, 'wb') as f:\n",
-    "#   pickle.dump(wid2pv, f)\n",
+    "pv_path = 'https://dumps.wikimedia.org/other/pageview_complete/monthly/2021/2021-08/pageviews-202108-user.bz2'\n",
+    "p = Path(pv_path)\n",
+    "pv_name = p.name\n",
+    "pv_temp = f'{p.stem}-4dedup.txt'\n",
+    "pv_clean = f'{p.stem}.pkl'\n",
+    "# Download the file (2.3GB)\n",
+    "!wget -N $pv_path\n",
+    "# Filter for English pages, and keep just two fields: article ID (3) and monthly\n",
+    "# total number of page views (5). Then, remove lines with article id or page\n",
+    "# view values that are not a sequence of digits.\n",
+    "!bzcat $pv_name | grep \"^en\\.wikipedia\" | cut -d' ' -f3,5 | grep -P \"^\\d+\\s\\d+$\" > $pv_temp\n",
     "# Create a Counter (dictionary) that sums up the pages views for the same\n",
     "# article, resulting in a mapping from article id to total page views.\n",
-    "# wid2pv = Counter()\n",
-    "# with open(pv_temp, 'rt') as f:\n",
-    "#     for line in f:\n",
-    "#         parts = line.split(' ')\n",
-    "#         wid2pv.update({int(parts[0]): int(parts[1])})\n",
-    "# # write out the counter as binary file (pickle it)\n",
-    "# with open(pv_clean, 'wb') as f:\n",
-    "#     pickle.dump(wid2pv, f)\n",
-    "#\n",
-    "# searcher.set_page_views(pv_temp)"
+    "wid2pv = Counter()\n",
+    "with open(pv_temp, 'rt') as f:\n",
+    "  for line in f:\n",
+    "    parts = line.split(' ')\n",
+    "    wid2pv.update({int(parts[0]): int(parts[1])})\n",
+    "# write out the counter as binary file (pickle it)\n",
+    "with open(pv_clean, 'wb') as f:\n",
+    "  pickle.dump(wid2pv, f)\n",
+    "# Create a Counter (dictionary) that sums up the pages views for the same\n",
+    "# article, resulting in a mapping from article id to total page views.\n",
+    "wid2pv = Counter()\n",
+    "with open(pv_temp, 'rt') as f:\n",
+    "    for line in f:\n",
+    "        parts = line.split(' ')\n",
+    "        wid2pv.update({int(parts[0]): int(parts[1])})\n",
+    "# write out the counter as binary file (pickle it)\n",
+    "with open(pv_clean, 'wb') as f:\n",
+    "    pickle.dump(wid2pv, f)"
    ],
    "metadata": {
     "collapsed": false,
@@ -269,7 +267,7 @@
     "      the wikipedia links. The first entry should the source page id and the\n",
     "      second entry is the destination page id. No duplicates should be present.\n",
     "    vertices: RDD\n",
-    "      An RDD where each row represents a vetrix (node) in the directed graph\n",
+    "      An RDD where each row represents a vertex (node) in the directed graph\n",
     "      created by the wikipedia links. No duplicates should be present.\n",
     "  \"\"\"\n",
     "  # YOUR CODE HERE\n",
@@ -299,9 +297,7 @@
     "pr_results = g.pageRank(resetProbability=0.15, maxIter=6)\n",
     "pr = pr_results.vertices.select(\"id\", \"pagerank\")\n",
     "pr = pr.sort(col('pagerank').desc())\n",
-    "pr.repartition(1).write.csv(f'gs://{bucket_name}/pr', compression=\"gzip\")\n",
-    "\n",
-    "# searcher.set_page_ranks(f'gs://{bucket_name}/pr')"
+    "pr.repartition(1).write.csv(f'gs://{bucket_name}/pr', compression=\"gzip\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -466,7 +462,7 @@
     "def createIndex(index, w2df_dict, directory):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
-    "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/{directory}'):\n",
+    "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
     "      if not blob.name.endswith(\"pickle\"):\n",
     "        continue\n",
     "      with blob.open(\"rb\") as f:\n",
