small bug fixes

--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -147,10 +147,8 @@
    "outputs": [],
    "source": [
     "# if nothing prints here you forgot to upload the file inverted_index_gcp.py to the home dir\n",
-    "% cd -q / home / dataproc\n",
-    "!ls body_inverted_index_gcp.py\n",
-    "!ls title_inverted_index_gcp.py\n",
-    "!ls anchor_inverted_index_gcp.py"
+    "%cd -q /home/dataproc\n",
+    "!ls inverted_index_gcp.py"
    ],
    "metadata": {
     "collapsed": false,
