Fixed id to title

--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -490,7 +490,8 @@
     "    index.doc_id_to_norm = doc_id_to_norm\n",
     "    # Save id to title\n",
     "    if isTitle:\n",
-    "        index.id_to_title = doc_title_pairs.collectAsMap()\n",
+    "        titles = parquetFile.select(\"id\", \"title\").rdd\n",
+    "        index.id_to_title = titles.collectAsMap()\n",
     "    # write the global stats out\n",
     "    index.write_index('.', directory)\n",
     "    # upload to gs\n",
