added necessary index fields

--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -464,7 +464,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, directory, isTitle):\n",
+    "def createIndex(index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -486,7 +486,9 @@
     "    # Add Average doc length\n",
     "    index.avg_dl = avg_dl\n",
     "    # Add number of terms\n",
-    "    index.number_of_terms = len(index.totals_for_terms)\n",
+    "    index.dictionary_size = len(index.totals_for_terms)\n",
+    "    # number of documents in the corpus\n",
+    "    index.corpus_size = corpus_size\n",
     "    # Add norm\n",
     "    index.doc_id_to_norm = doc_id_to_norm\n",
     "    # Save id to title\n",
@@ -552,6 +554,7 @@
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
+    "# number of documents in the corpus\n",
     "N = len(dl)\n",
     "# norm of the doc for later cosine similarity calculation\n",
     "doc_id_to_norm = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
@@ -559,7 +562,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, 'body_index', False)"
+    "createIndex(body_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, N, 'body_index', False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -616,7 +619,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, 'title_index', True)"
+    "createIndex(title_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, N, 'title_index', True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -675,7 +678,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, 'anchor_index', False)"
+    "createIndex(anchor_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, N, 'anchor_index', False)"
    ],
    "metadata": {
     "collapsed": false,
