--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -486,7 +486,7 @@
     "    # Add Average doc length\n",
     "    index.avg_dl = avg_dl\n",
     "    # Add number of terms\n",
-    "    index.dictionary_size = len(index.totals_for_terms)\n",
+    "    index.dictionary_size = len(index.term_total)\n",
     "    # number of documents in the corpus\n",
     "    index.corpus_size = corpus_size\n",
     "    # Add norm\n",
