--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -662,7 +662,7 @@
     "#word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
     "\n",
-    "DL_RDD = doc_anchor_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
+    "DL_RDD = doc_anchor_pairs.map(lambda x: get_doc_length(str(x[1]), x[0]))\n",
     "# average length of the corpus's documents\n",
     "avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
     "# documents length map\n",
