--- a/search_engine/startup_shell_comands.ipynb
+++ b/search_engine/startup_shell_comands.ipynb
@@ -11,6 +11,8 @@
    },
    "outputs": [],
    "source": [
+    "pip install gensim\n",
+    "\n",
     "mkdir indices\n",
     "mkdir body_bins\n",
     "mkdir title_bins\n",
