--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "!pip install -q google-cloud-storage == 1.43.0\n",
-    "!pip install -q graphframes"
+    "!pip install -q graphframes\n",
+    "!pip install -q gensim"
    ],
    "metadata": {
     "collapsed": false,
@@ -56,6 +57,8 @@
     "from pathlib import Path\n",
     "import pickle\n",
     "from google.cloud import storage\n",
+    "import gensim.downloader\n",
+    "\n",
     "\n",
     "import hashlib\n",
     "def _hash(s):\n",
@@ -515,6 +518,20 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "word2vec = gensim.downloader.load('fasttext-wiki-news-subwords-300')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Create the Body Indexes"
@@ -554,9 +571,6 @@
     "avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
     "# documents length map\n",
     "dl = DL_RDD.collectAsMap()\n",
-    "\n",
-    "# normalize postings\n",
-    "postings = postings.map(lambda x: (x[0], x[1][1]))\n",
     "\n",
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
@@ -629,13 +643,22 @@
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
     "N = len(dl)\n",
+    "\n",
+    "# word to idf map\n",
+    "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "\n",
+    "doc_all_tf = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0])))\n",
+    "\n",
+    "# word to tf-idf map\n",
+    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1]})).collectAsMap()\n",
+    "\n",
     "# norm of the doc for later cosine similarity calculation\n",
     "doc_norm = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)"
+    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -688,13 +711,22 @@
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
     "N = len(dl)\n",
+    "\n",
+    "# word to idf map\n",
+    "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "\n",
+    "doc_all_tf = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1])))\n",
+    "\n",
+    "# word to tf-idf map\n",
+    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1]})).collectAsMap()\n",
+    "\n",
     "# norm of the doc for later cosine similarity calculation\n",
     "doc_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)"
+    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)"
    ],
    "metadata": {
     "collapsed": false,
