--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -60,7 +60,7 @@
     "from pathlib import Path\n",
     "import pickle\n",
     "from google.cloud import storage\n",
-    "# import gensim.downloader\n",
+    "import gensim.downloader\n",
     "\n",
     "\n",
     "import hashlib\n",
@@ -411,6 +411,20 @@
     "    # YOUR CODE HERE\n",
     "    return sorted(unsorted_pl)\n",
     "\n",
+    "def reverse_reduce_word_counts(unsorted_pl):\n",
+    "    \"\"\" Returns a sorted posting list by wiki_id.\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "      unsorted_pl: list of tuples\n",
+    "        A list of (wiki_id, tf) tuples\n",
+    "    Returns:\n",
+    "    --------\n",
+    "      list of tuples\n",
+    "        A sorted posting list descending.\n",
+    "    \"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "    return sorted(unsorted_pl, reverse=True)\n",
+    "\n",
     "def get_doc_counter(text):\n",
     "  \"\"\"\n",
     "  Calculates and returns a word counter for a given document\n",
@@ -470,7 +484,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
+    "def createIndex(index, w2df_dict, w2idf, term_total, term_similar_score, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -486,13 +500,13 @@
     "    # Add the token - df dictionary to the inverted index\n",
     "    index.df = w2df_dict\n",
     "    # Add the token - idf dictionary to the inverted index\n",
-    "    index.w2idf = w2idf\n",
+    "    index.idf = w2idf\n",
     "    # Add the token - tfidf dictionary to the inverted index\n",
-    "    index.doc_tfidf = doc_tfidf\n",
+    "    # index.doc_tfidf = doc_tfidf\n",
     "    # Add total number of terms dict\n",
     "    index.term_total = term_total\n",
-    "    # # add similar words for each word\n",
-    "    # index.term_similar_score = term_similar_score\n",
+    "    # add similar words for each word\n",
+    "    index.term_similar_score = term_similar_score\n",
     "    # Add DL_body dict\n",
     "    index.dl = dl\n",
     "    # Add Average doc length\n",
@@ -549,27 +563,7 @@
     "  rank = [x for x in range(1, len(word_counts)+1)]\n",
     "  frequency = sorted(word_counts.values(), reverse=True)\n",
     "  plt.loglog(rank, frequency, '.')\n",
-    "\n",
-    "\n",
-    "# def create_zipfs_graph_no_log(word_counts):\n",
-    "#   ''' Plot a log-log scale Zipf's law graph.\n",
-    "#   Parameters:\n",
-    "#   -----------\n",
-    "#   word_counts: Counter\n",
-    "#     A counter of term occurences in a corpus.\n",
-    "#   Returns:\n",
-    "#   --------\n",
-    "#   rank: list of int\n",
-    "#     Rank of words (x-axis of Zipf's law)\n",
-    "#   frequency: list of int\n",
-    "#     Count of word occurences (y-axis of Zipf's law)\n",
-    "#   '''\n",
-    "#   # Assign the appropriate values to the variables rank and frequency used by\n",
-    "#   # the ploting function.\n",
-    "#   # YOUR CODE HERE\n",
-    "#   rank = [x for x in range(1, len(word_counts)+1)]\n",
-    "#   frequency = sorted(word_counts.values(), reverse=True)\n",
-    "#   plt.plot(rank, frequency)"
+    "  plt.plot(rank, frequency)"
    ],
    "metadata": {
     "collapsed": false,
@@ -583,7 +577,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# word2vec_glove = gensim.downloader.load('glove-wiki-gigaword-50')"
+    "word2vec_glove = gensim.downloader.load('glove-wiki-gigaword-50')"
    ],
    "metadata": {
     "collapsed": false,
@@ -597,12 +591,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# def get_similar_words(term):\n",
-    "#     try:\n",
-    "#         similars = word2vec_glove.most_similar(term, topn=5)\n",
-    "#     except:\n",
-    "#         similars = [(term, 1) for i in range(5)]\n",
-    "#     return similars"
+    "def get_similar_words(term):\n",
+    "    try:\n",
+    "        similars = word2vec_glove.most_similar(term, topn=5)\n",
+    "    except:\n",
+    "        similars = [(term, 1) for i in range(5)]\n",
+    "    return similars"
    ],
    "metadata": {
     "collapsed": false,
@@ -644,6 +638,8 @@
     "# filtering postings and calculate df\n",
     "postings = postings.filter(lambda x: len(x[1])>50)\n",
     "\n",
+    "reverse_postings = word_counts.groupByKey().mapValues(reverse_reduce_word_counts)\n",
+    "\n",
     "w2df = calculate_df(postings)\n",
     "# word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
@@ -655,26 +651,29 @@
     "dl = DL_RDD.collectAsMap()\n",
     "\n",
     "# word counts map for the whole corpus\n",
-    "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "term_total_rdd = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y)\n",
+    "term_total = term_total_rdd.collectAsMap()\n",
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
-    "# print(f\"top ten words are: {term_total.items()[:10]}\")\n",
-    "# print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
+    "print(f\"top ten words are: {reverse_postings.take(10)}\")\n",
+    "print(f\"bottom ten words are: {postings.take(10)}\")\n",
     "# create_zipfs_graph_no_log(term_total)\n",
     "create_zipfs_graph(term_total)\n",
     "\n",
-    "# # word to the 5 most similar words and their score\n",
+    "# word to the 5 most similar words and their score\n",
     "# term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "term_similar_score = term_total_rdd.mapValues(get_similar_words).collectAsMap()\n",
     "\n",
     "# number of documents in the corpus\n",
     "N = len(dl)\n",
     "\n",
     "# word to idf map\n",
-    "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "# w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "w2idf = w2df.mapValues(lambda x: math.log(N / x[1] + .0000001, 10)).collectAsMap()\n",
     "\n",
     "doc_all_tf = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0])))\n",
     "\n",
     "# word to tf-idf map\n",
-    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1].items()})).collectAsMap()\n",
+    "# doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1].items()})).collectAsMap()\n",
     "\n",
     "# norm of the doc for later cosine similarity calculation\n",
     "doc_norm = doc_all_tf.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
@@ -682,7 +681,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
+    "createIndex(body_index, w2df_dict, w2idf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
     "\n",
     "end = time()\n",
     "print(f\"time taken: {end-start}\")"
@@ -724,6 +723,8 @@
     "word_counts = doc_title_pairs.flatMap(lambda x: word_count(x[0], x[1]))\n",
     "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
     "\n",
+    "reverse_postings = word_counts.groupByKey().mapValues(reverse_reduce_word_counts)\n",
+    "\n",
     "w2df = calculate_df(postings)\n",
     "#word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
@@ -735,33 +736,37 @@
     "dl = DL_RDD.collectAsMap()\n",
     "\n",
     "# word counts map for the whole corpus\n",
-    "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "term_total_rdd = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y)\n",
+    "term_total = term_total_rdd.collectAsMap()\n",
+    "\n",
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
-    "# print(f\"top ten words are: {term_total.items()[:10]}\")\n",
-    "# print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
+    "print(f\"top ten words are: {reverse_postings.take(10)}\")\n",
+    "print(f\"bottom ten words are: {postings.take(10)}\")\n",
     "# create_zipfs_graph_no_log(term_total)\n",
     "create_zipfs_graph(term_total)\n",
     "\n",
     "# # word to the 5 most similar words and their score\n",
     "# term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "term_similar_score = term_total_rdd.mapValues(get_similar_words).collectAsMap()\n",
     "\n",
     "N = len(dl)\n",
     "\n",
     "# word to idf map\n",
-    "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "# w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "w2idf = w2df.mapValues(lambda x: math.log(N / x[1] + .0000001, 10)).collectAsMap()\n",
     "\n",
     "doc_all_tf = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0])))\n",
     "\n",
     "# word to tf-idf map\n",
-    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1].items()})).collectAsMap()\n",
+    "# doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1].items()})).collectAsMap()\n",
     "\n",
     "# norm of the doc for later cosine similarity calculation\n",
-    "doc_norm = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "doc_norm = doc_all_tf.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
+    "createIndex(title_index, w2df_dict, w2idf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
     "\n",
     "end = time()\n",
     "print(f\"time taken: {end-start}\")"
@@ -803,7 +808,10 @@
     "\n",
     "# word counts map\n",
     "word_counts = doc_anchor.flatMap(lambda x: x.anchor_text).distinct().map(lambda x: word_count(x.text, x.id)).flatMap(lambda x: x).distinct()\n",
+    "\n",
     "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
+    "\n",
+    "reverse_postings = word_counts.groupByKey().mapValues(reverse_reduce_word_counts)\n",
     "\n",
     "w2df = calculate_df(postings)\n",
     "#word to df map\n",
@@ -816,34 +824,38 @@
     "dl = DL_RDD.collectAsMap()\n",
     "\n",
     "# word counts map for the whole corpus\n",
-    "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "term_total_rdd = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y)\n",
+    "term_total = term_total_rdd.collectAsMap()\n",
+    "\n",
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
-    "# print(f\"top ten words are: {term_total.items()[:10]}\")\n",
-    "# print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
+    "print(f\"top ten words are: {reverse_postings.take(10)}\")\n",
+    "print(f\"bottom ten words are: {postings.take(10)}\")\n",
     "# create_zipfs_graph_no_log(term_total)\n",
     "create_zipfs_graph(term_total)\n",
     "\n",
     "# # word to the 5 most similar words and their score\n",
     "# term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "term_similar_score = term_total_rdd.mapValues(get_similar_words).collectAsMap()\n",
     "\n",
     "N = len(dl)\n",
     "print(f\"number of docs in corpus: {N}\")\n",
     "\n",
     "# word to idf map\n",
-    "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "# w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "w2idf = w2df.mapValues(lambda x: math.log(N / x[1] + .0000001, 10)).collectAsMap()\n",
     "\n",
     "doc_all_tf = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1])))\n",
     "\n",
     "# word to tf-idf map\n",
-    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1].items()})).collectAsMap()\n",
+    "# doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1].items()})).collectAsMap()\n",
     "\n",
     "# norm of the doc for later cosine similarity calculation\n",
-    "doc_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "doc_norm = doc_all_tf.filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
+    "createIndex(anchor_index, w2df_dict, w2idf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
     "\n",
     "end = time()\n",
     "print(f\"time taken: {end-start}\")"
