--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -411,20 +411,6 @@
     "    # YOUR CODE HERE\n",
     "    return sorted(unsorted_pl)\n",
     "\n",
-    "def reverse_reduce_word_counts(unsorted_pl):\n",
-    "    \"\"\" Returns a sorted posting list by wiki_id.\n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "      unsorted_pl: list of tuples\n",
-    "        A list of (wiki_id, tf) tuples\n",
-    "    Returns:\n",
-    "    --------\n",
-    "      list of tuples\n",
-    "        A sorted posting list descending.\n",
-    "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    return sorted(unsorted_pl, reverse=True)\n",
-    "\n",
     "def get_doc_counter(text):\n",
     "  \"\"\"\n",
     "  Calculates and returns a word counter for a given document\n",
@@ -638,8 +624,6 @@
     "# filtering postings and calculate df\n",
     "postings = postings.filter(lambda x: len(x[1])>50)\n",
     "\n",
-    "reverse_postings = word_counts.groupByKey().mapValues(reverse_reduce_word_counts)\n",
-    "\n",
     "w2df = calculate_df(postings)\n",
     "# word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
@@ -650,12 +634,14 @@
     "# documents length map\n",
     "dl = DL_RDD.collectAsMap()\n",
     "\n",
+    "postings = word_counts.mapValues(lambda x: (x[0], x[1] / dl[x[0]]))\n",
+    "\n",
     "# word counts map for the whole corpus\n",
     "term_total_rdd = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y)\n",
     "term_total = term_total_rdd.collectAsMap()\n",
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
-    "print(f\"top ten words are: {reverse_postings.take(10)}\")\n",
-    "print(f\"bottom ten words are: {postings.take(10)}\")\n",
+    "print(f\"top ten words are: {term_total_rdd.top(10)}\")\n",
+    "print(f\"bottom ten words are: {term_total_rdd.sortBy(lambda x: x[1]).take(10)}\")\n",
     "# create_zipfs_graph_no_log(term_total)\n",
     "create_zipfs_graph(term_total)\n",
     "\n",
@@ -723,8 +709,6 @@
     "word_counts = doc_title_pairs.flatMap(lambda x: word_count(x[0], x[1]))\n",
     "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
     "\n",
-    "reverse_postings = word_counts.groupByKey().mapValues(reverse_reduce_word_counts)\n",
-    "\n",
     "w2df = calculate_df(postings)\n",
     "#word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
@@ -735,13 +719,15 @@
     "# documents length map\n",
     "dl = DL_RDD.collectAsMap()\n",
     "\n",
+    "postings = word_counts.mapValues(lambda x: (x[0], x[1] / dl[x[0]]))\n",
+    "\n",
     "# word counts map for the whole corpus\n",
     "term_total_rdd = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y)\n",
     "term_total = term_total_rdd.collectAsMap()\n",
     "\n",
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
-    "print(f\"top ten words are: {reverse_postings.take(10)}\")\n",
-    "print(f\"bottom ten words are: {postings.take(10)}\")\n",
+    "print(f\"top ten words are: {term_total_rdd.top(10)}\")\n",
+    "print(f\"bottom ten words are: {term_total_rdd.sortBy(lambda x: x[1]).take(10)}\")\n",
     "# create_zipfs_graph_no_log(term_total)\n",
     "create_zipfs_graph(term_total)\n",
     "\n",
@@ -811,8 +797,6 @@
     "\n",
     "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
     "\n",
-    "reverse_postings = word_counts.groupByKey().mapValues(reverse_reduce_word_counts)\n",
-    "\n",
     "w2df = calculate_df(postings)\n",
     "#word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
@@ -822,14 +806,16 @@
     "avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
     "# documents length map\n",
     "dl = DL_RDD.collectAsMap()\n",
+    "#[term, [(doc_id, tf), (doc_id, tf), (doc_id, tf)]]\n",
+    "postings = word_counts.mapValues(lambda x: (x[0], x[1] / dl[x[0]]))\n",
     "\n",
     "# word counts map for the whole corpus\n",
     "term_total_rdd = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y)\n",
     "term_total = term_total_rdd.collectAsMap()\n",
     "\n",
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
-    "print(f\"top ten words are: {reverse_postings.take(10)}\")\n",
-    "print(f\"bottom ten words are: {postings.take(10)}\")\n",
+    "print(f\"top ten words are: {term_total_rdd.top(10)}\")\n",
+    "print(f\"bottom ten words are: {term_total_rdd.sortBy(lambda x: x[1]).take(10)}\")\n",
     "# create_zipfs_graph_no_log(term_total)\n",
     "create_zipfs_graph(term_total)\n",
     "\n",
