--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -26,7 +26,7 @@
     "!pip install -q graphframes\n",
     "# !pip install -q opencv-contrib-python\n",
     "# !pip install --upgrade urllib3\n",
-    "# !pip install gensim --no-binary :all:\n",
+    "!pip install gensim --no-binary :all:\n",
     "# !pip install --upgrade numpy"
    ],
    "metadata": {
@@ -634,8 +634,6 @@
     "# documents length map\n",
     "dl = DL_RDD.collectAsMap()\n",
     "\n",
-    "postings = word_counts.mapValues(lambda x: (x[0], x[1] / dl[x[0]]))\n",
-    "\n",
     "# word counts map for the whole corpus\n",
     "term_total_rdd = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y)\n",
     "term_total = term_total_rdd.collectAsMap()\n",
@@ -654,7 +652,7 @@
     "\n",
     "# word to idf map\n",
     "# w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
-    "w2idf = w2df.mapValues(lambda x: math.log(N / x[1] + .0000001, 10)).collectAsMap()\n",
+    "w2idf = w2df.mapValues(lambda x: math.log(N / x + .0000001, 10)).collectAsMap()\n",
     "\n",
     "doc_all_tf = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0])))\n",
     "\n",
@@ -719,8 +717,6 @@
     "# documents length map\n",
     "dl = DL_RDD.collectAsMap()\n",
     "\n",
-    "postings = word_counts.mapValues(lambda x: (x[0], x[1] / dl[x[0]]))\n",
-    "\n",
     "# word counts map for the whole corpus\n",
     "term_total_rdd = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y)\n",
     "term_total = term_total_rdd.collectAsMap()\n",
@@ -739,7 +735,7 @@
     "\n",
     "# word to idf map\n",
     "# w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
-    "w2idf = w2df.mapValues(lambda x: math.log(N / x[1] + .0000001, 10)).collectAsMap()\n",
+    "w2idf = w2df.mapValues(lambda x: math.log(N / x + .0000001, 10)).collectAsMap()\n",
     "\n",
     "doc_all_tf = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0])))\n",
     "\n",
@@ -806,8 +802,6 @@
     "avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
     "# documents length map\n",
     "dl = DL_RDD.collectAsMap()\n",
-    "#[term, [(doc_id, tf), (doc_id, tf), (doc_id, tf)]]\n",
-    "postings = word_counts.mapValues(lambda x: (x[0], x[1] / dl[x[0]]))\n",
     "\n",
     "# word counts map for the whole corpus\n",
     "term_total_rdd = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y)\n",
@@ -828,7 +822,7 @@
     "\n",
     "# word to idf map\n",
     "# w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
-    "w2idf = w2df.mapValues(lambda x: math.log(N / x[1] + .0000001, 10)).collectAsMap()\n",
+    "w2idf = w2df.mapValues(lambda x: math.log(N / x + .0000001, 10)).collectAsMap()\n",
     "\n",
     "doc_all_tf = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1])))\n",
     "\n",
