added measures to test the engine

--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -26,7 +26,7 @@
     "!pip install -q graphframes\n",
     "# !pip install -q opencv-contrib-python\n",
     "# !pip install --upgrade urllib3\n",
-    "!pip install gensim --no-binary :all:\n",
+    "# !pip install gensim --no-binary :all:\n",
     "# !pip install --upgrade numpy"
    ],
    "metadata": {
@@ -60,7 +60,7 @@
     "from pathlib import Path\n",
     "import pickle\n",
     "from google.cloud import storage\n",
-    "import gensim.downloader\n",
+    "# import gensim.downloader\n",
     "\n",
     "\n",
     "import hashlib\n",
@@ -470,7 +470,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, w2idf, term_total, term_similar_score, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
+    "def createIndex(index, w2df_dict, w2idf, term_total, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -492,7 +492,7 @@
     "    # Add total number of terms dict\n",
     "    index.term_total = term_total\n",
     "    # add similar words for each word\n",
-    "    index.term_similar_score = term_similar_score\n",
+    "    # index.term_similar_score = term_similar_score\n",
     "    # Add DL_body dict\n",
     "    index.dl = dl\n",
     "    # Add Average doc length\n",
@@ -563,7 +563,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "word2vec_glove = gensim.downloader.load('glove-wiki-gigaword-50')"
+    "# word2vec_glove = gensim.downloader.load('glove-wiki-gigaword-50')"
    ],
    "metadata": {
     "collapsed": false,
@@ -577,12 +577,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def get_similar_words(term):\n",
-    "    try:\n",
-    "        similars = word2vec_glove.most_similar(term, topn=5)\n",
-    "    except:\n",
-    "        similars = [(term, 1) for i in range(5)]\n",
-    "    return similars"
+    "# def get_similar_words(term):\n",
+    "#     try:\n",
+    "#         similars = word2vec_glove.most_similar(term, topn=5)\n",
+    "#     except:\n",
+    "#         similars = [(term, 1) for i in range(5)]\n",
+    "#     return similars"
    ],
    "metadata": {
     "collapsed": false,
@@ -645,7 +645,7 @@
     "\n",
     "# word to the 5 most similar words and their score\n",
     "# term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
-    "term_similar_score = term_total_rdd.mapValues(get_similar_words).collectAsMap()\n",
+    "# term_similar_score = term_total_rdd.mapValues(get_similar_words).collectAsMap()\n",
     "\n",
     "# number of documents in the corpus\n",
     "N = len(dl)\n",
@@ -665,7 +665,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, w2idf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
+    "createIndex(body_index, w2df_dict, w2idf, term_total, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
     "\n",
     "end = time()\n",
     "print(f\"time taken: {end-start}\")"
@@ -729,7 +729,7 @@
     "\n",
     "# # word to the 5 most similar words and their score\n",
     "# term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
-    "term_similar_score = term_total_rdd.mapValues(get_similar_words).collectAsMap()\n",
+    "# term_similar_score = term_total_rdd.mapValues(get_similar_words).collectAsMap()\n",
     "\n",
     "N = len(dl)\n",
     "\n",
@@ -748,7 +748,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, w2idf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
+    "createIndex(title_index, w2df_dict, w2idf, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
     "\n",
     "end = time()\n",
     "print(f\"time taken: {end-start}\")"
@@ -815,7 +815,7 @@
     "\n",
     "# # word to the 5 most similar words and their score\n",
     "# term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
-    "term_similar_score = term_total_rdd.mapValues(get_similar_words).collectAsMap()\n",
+    "# term_similar_score = term_total_rdd.mapValues(get_similar_words).collectAsMap()\n",
     "\n",
     "N = len(dl)\n",
     "print(f\"number of docs in corpus: {N}\")\n",
@@ -835,7 +835,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, w2idf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
+    "createIndex(anchor_index, w2df_dict, w2idf, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
     "\n",
     "end = time()\n",
     "print(f\"time taken: {end-start}\")"
